--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <div class="container">
-        <h1>Series Calculator</h1>
+        <div id="title-container">
+            <h1>Series Calculator</h1>
+            <button id "instructions">i</button>
+        </div>
         <div id="calculator">
             <div class="date-field">
                 <label for="end-date">Series End Date (MM/DD/YYYY):</label>
@@ -24,7 +27,6 @@
                 <button id="add-fields">+</button>
                 <button id="remove-fields">-</button>
                 <button id="calculate">Calculate</button>
-                <button id="instructions">i</button>
             </div>
         </div>
         <div id="results" style="display: none;">
